--- a/.gitignore
+++ b/.gitignore
@@ -22,5 +22,15 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-*/target/*
+.gradle/
+build/
+target/
+bin/
+dependency-reduced-pom.xml
 /.metadata/
+
+.classpath
+.project
+.settings/
+.sts4-cache/
+.attach_pid*
